fixed css responsiveness on small devices

--- a/front-end/src/app/install-it/components/generate-script/generate-script.component.scss
+++ b/front-end/src/app/install-it/components/generate-script/generate-script.component.scss
@@ -4,7 +4,7 @@
 
 .bash-install-url {
   font-family: monospace;
-  font-size: 14px;
+  font-size: 14px !important;
   line-height: 1.5;
   white-space: pre-wrap;
   border-radius: 25px;
