--- a/front-end/src/app/install-it/components/package/package.component.scss
+++ b/front-end/src/app/install-it/components/package/package.component.scss
@@ -27,7 +27,7 @@ div {
     margin-top: 0;
     font-weight: normal !important;
     color: black;
-    font-size: 32px;
+    font-size: 32px !important;
     text-transform: capitalize;
   }
 }
